@@ -334,59 +334,3 @@ get_m12_annotation_colors = function(a1 = NULL, a1_cf = NULL,
 
   return(c(cf_cols, a1_rest_cols, a2_rest_cols))
 }
-
-parse_annotation_dat = function(annotationDat = NULL, clinicalFeatures = NULL){
-
-  if(class(annotationDat)[1] == 'MAF'){
-    annotationDat = data.table::copy(getClinicalData(x = annotationDat))
-    data.table::setDF(annotationDat)
-  }else if(class(annotationDat)[1] %in% c('data.frame', 'data.table')){
-    data.table::setDF(annotationDat)
-  }else{
-    return(NULL)
-  }
-
-  if(length(clinicalFeatures[!clinicalFeatures %in% colnames(annotationDat)]) > 0){
-    message('Following columns are missing from annotation slot of MAF. Ignoring them..')
-    print(clinicalFeatures[!clinicalFeatures %in% colnames(annotationDat)])
-    clinicalFeatures = clinicalFeatures[clinicalFeatures %in% colnames(annotationDat)]
-    if(length(clinicalFeatures) == 0){
-      message('Make sure at-least one of the values from provided clinicalFeatures are present in annotation slot of MAF. Here are available annotaions..')
-      print(colnames(annotationDat))
-      stop('Zero annotaions to add! You can also provide custom annotations via annotationDat argument.')
-    }
-  }
-  annotation = data.frame(row.names = annotationDat$Tumor_Sample_Barcode ,annotationDat[,clinicalFeatures, drop = FALSE], stringsAsFactors = FALSE)
-
-  return(annotation)
-}
-
-get_anno_cols = function(ann, numericAnnoCol = NULL){
-  ann_cols = list()
-  if(is.null(numericAnnoCol)){
-    numericAnnoCol =  RColorBrewer::brewer.pal(n = 9, name = "YlOrBr")
-  }else{
-    numericAnnoCol =  RColorBrewer::brewer.pal(n = 9, name = numericAnnoCol)
-  }
-  for(i in 1:ncol(ann)){
-    if(is.numeric(ann[,i])){
-      x = ann[,i]
-      ann_lvls_cols = colorRampPalette(numericAnnoCol)(length(x))
-      names(ann_lvls_cols) = x[order(x, na.last = TRUE)]
-      ann_cols[[i]] = ann_lvls_cols
-    }else{
-      ann_lvls = unique(as.character(ann[,i]))
-      if(length(ann_lvls) <= 9){
-        ann_lvls_cols = RColorBrewer::brewer.pal(n = 9, name = 'Set1')[1:length(ann_lvls)]
-      }else{
-        ann_lvls_cols = colors()[sample(x = 1:100, size = length(ann_lvls), replace = FALSE)]
-      }
-      ann_cols[[i]] = ann_lvls_cols
-      names(ann_cols[[i]]) = ann_lvls
-    }
-  }
-
-  names(ann_cols) = colnames(ann)
-
-  return(ann_cols)
-}
