@@ -7,8 +7,9 @@
 oncoplot(maf, top = 20, genes = NULL, mutsig = NULL,
   mutsigQval = 0.1, drawRowBar = TRUE, drawColBar = TRUE,
   draw_titv = FALSE, logColBar = FALSE, clinicalFeatures = NULL,
-  additionalFeature = NULL, additionalFeaturePch = 20,
-  annotationDat = NULL, annotationColor = NULL, genesToIgnore = NULL,
+  exprsTbl = NULL, additionalFeature = NULL,
+  additionalFeaturePch = 20, annotationDat = NULL,
+  annotationColor = NULL, genesToIgnore = NULL,
   showTumorSampleBarcodes = FALSE, removeNonMutated = TRUE,
   fill = FALSE, colors = NULL, sortByMutation = FALSE,
   sortByAnnotation = FALSE, numericAnnoCol = NULL,
